--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,29 @@
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  html, body, * {
+    font-family: var(--font-sans), sans-serif;
+    line-height: 1.5;
+    -webkit-text-size-adjust: 100%;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    font-feature-settings: normal;
+    font-variation-settings: normal;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  body {
+    background: var(--background);
+    color: var(--foreground);
+  }
+}
+
+#n8n-chat .chat-button-wrapper {
+  display: none !important;
+}
+
+.n8n-chat-button-wrapper {
+  display: none !important;
 }
